--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "nodemailer": "^6.9.13",
     "razorpay": "^2.9.4",
     "stripe": "^15.10.0",
-    "validator": "^13.12.0"
+    "swagger-ui-express": "^5.0.1",
+    "validator": "^13.12.0",
+    "yaml": "^2.4.5",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
